# pokemon-ai

./: .env.example  .gitignore  CLAUDE.md  DEVLOG.md  README.md  pyproject.toml
data/: progression.json  type_chart.json
scripts/: dump_game_state.py  fetch_pokeapi_data.py  test_connection.py
src/pokemon_ai/: __init__.py  __main__.py  config.py  main.py
src/pokemon_ai/agent/: agent.py  context.py  history.py  prompts.py
src/pokemon_ai/emulator/: buttons.py  client.py  screenshot.py
src/pokemon_ai/knowledge/: moves.py  pokemon.py  progression.py  types.py
src/pokemon_ai/llm/: base.py  claude.py  gemini.py  ollama.py  openai_provider.py  rate_limiter.py  tools.py
src/pokemon_ai/memory/: addresses.py  battle.py  decrypt.py  party.py  player.py  reader.py
src/pokemon_ai/state/: game_state.py  mode_detector.py  state_manager.py
tests/: conftest.py
tests/test_agent/: test_history.py  test_prompts.py
tests/test_knowledge/: test_moves.py  test_progression.py  test_types.py
tests/test_llm/: test_base.py  test_rate_limiter.py  test_tools.py
tests/test_memory/: test_decrypt.py
tests/test_state/: test_game_state.py
