[project]
name = "pokemon-ai"
version = "0.1.0"
description = "AI agent that autonomously plays Pokemon FireRed via mGBA-http"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "Pillow>=10.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
]

[project.scripts]
pokemon-ai = "pokemon_ai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokemon_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires running mGBA-http",
    "llm: requires LLM API keys",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]
